--- a/authentication/templates/registration/password_reset_form.html
+++ b/authentication/templates/registration/password_reset_form.html
@@ -1,6 +1,9 @@
 <h2>Reset Password</h2>
 <form method="post">
     {% csrf_token %}
-    <p><label>Email:</label><input type="email" name="email" required></p>
+    <div>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
+    </div>
     <button type="submit">Send Reset Link</button>
 </form>
