--- a/authentication/static/css/login.css
+++ b/authentication/static/css/login.css
@@ -41,7 +41,7 @@ body {
     box-shadow: var(--shadow-lg);
     padding: 1rem;
     width: 100%;
-    max-width: 400px;
+    max-width: 300px;
     transition: var(--transition);
     position: relative;
     overflow: hidden;
@@ -81,7 +81,8 @@ h2 {
     margin-bottom: 1.5rem;
     text-align: center;
     animation: shake 0.5s ease-in-out;
-    font-size: 0.9rem;
+    font-size: 1rem;
+    font-weight: 600;
 }
 
 @keyframes shake {
@@ -120,7 +121,7 @@ label {
 
 input {
     width: 100%;
-    padding: 0.75rem 1rem;
+    padding: 0.75rem 0.8rem;
     border: 1px solid var(--light-gray);
     border-radius: var(--radius-sm);
     font-size: 1rem;
