--- a/authentication/static/css/login.css
+++ b/authentication/static/css/login.css
@@ -124,10 +124,11 @@ input {
     padding: 0.75rem 0.8rem;
     border: 1px solid var(--light-gray);
     border-radius: var(--radius-sm);
-    font-size: 1rem;
+    font-size: 0.9rem;
     transition: var(--transition);
     background-color: white;
     position: relative;
+    font-weight: 600;
 }
 
 input:focus {
