--- a/authentication/templates/home.html
+++ b/authentication/templates/home.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,7 +22,7 @@
                 <div class="content">
                     <p>Connect with agricultural experts, access modern farming techniques, and join a community dedicated to sustainable agriculture. Grow your business with our platform.</p>
                 </div>
-                <a href="{% url 'login' %}" class="submit-btn">
+                <a href="{% url 'logout' %}" class="btn btn-outline-danger ms-auto">Continue</a>
                     Continue as Farmer
                 </a>
             </div>
@@ -32,7 +32,7 @@
                 <div class="content">
                     <p>Share your expertise with farmers, provide technical solutions, and contribute to the modernization of agriculture. Your skills can make a real difference.</p>
                 </div>
-                <a href="" class="submit-btn" >
+                 <a href="{% url 'logout' %}" class="btn btn-outline-danger ms-auto">Continue</a>
                     Continue as Technician
                 </a>
             </div>
@@ -40,4 +40,4 @@
     </div>
 
 </body>
-</html> -->
+</html>
